Added user quote

--- a/material/overrides/home.html
+++ b/material/overrides/home.html
@@ -491,7 +491,29 @@
                   <img src="assets/images/testimonials/testimonial-4.jpg" alt="" class="avatar avatar-md rounded-circle" >
                   <div class="ms-2">
                     <h4 class="text-primary"><a href="https://www.linkedin.com/in/andrewdsawyer/" target="_blank">Andy Sawyer</a></h4>
-                    <h5>Strategy Leader & Advisor</h5>
+                    <h5>Strategy Leader & Advisor<br /><span>Easy Agile</span></h5>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="testimonial">
+
+              <div class="testimonial-body">
+                <div class="quote-icon">
+                  <img src="/assets/images/home/quote-icon.svg" />
+                </div>
+                <p class="testimonial-text">
+                  A client told me they wanted to check their data and there was <strong>no other solution that offered a UI like Recce</strong>... it was really useful</strong>.
+                </p>
+              </div>
+
+              <div class="testimonial-meta">
+                <div class="testimonial-meta-content">
+                  <img src="assets/images/testimonials/testimonial-6.jpg" alt="" class="avatar avatar-md rounded-circle" >
+                  <div class="ms-2">
+                    <h4 class="text-primary"><a href="https://www.linkedin.com/in/acrulopez/" target="_blank">Alejandro de la Cruz López</a></h4>
+                    <h5>Head of Data Engineering<br /><span>Astrafy</span></h5>
                   </div>
                 </div>
               </div>
