removed 'InfuseAI' from homepage copyright notice

--- a/material/overrides/app.html
+++ b/material/overrides/app.html
@@ -138,7 +138,7 @@
 
         <div class="copy">
 
-            <p>&copy; 2025 InfuseAI / Recce</p>  
+            <p>&copy; 2025 Recce</p>  
 
             <a href="https://cal.com/team/recce/chat?utm_source=banner&utm_campaign=oss" target="_blank" />
               <img alt="Book us with Cal.com" src="https://cal.com/book-with-cal-light.svg" />
