Careers page, links added, FAQs, SOC2 footer

--- a/material/overrides/about.html
+++ b/material/overrides/about.html
@@ -30,8 +30,8 @@
         <h2>We provide enhanced visibility into the data impact from dbt modeling changes by comparing the data in dev and production environments.</h2>
 
         <div class="cta-buttons">
-          <a href="#" class="btn btn-primary btn-large">Join Us</a>
-          <a href="#" class="btn btn-hollow btn-large">Book a Call</a>
+          <a href="/careers" class="btn btn-primary btn-large">Join Us</a>
+          <a href="https://cal.com/team/recce/chat" class="btn btn-hollow btn-large">Book a Call</a>
         </div>
 
       </div>
