--- a/material/overrides/home.html
+++ b/material/overrides/home.html
@@ -50,8 +50,8 @@
             <h2>Recce turns data changes into actionable checklists so you can spot issues before they hit production. Cut review time, boost confidence, and deploy data at the speed of your business.</h2>
 
             <div class="cta-buttons">
-              <a href="/docs/get-started/" class="btn btn-primary btn-large">Try Recce for free</a>
-              <a href="#" class="btn btn-hollow btn-large">See it in action</a>
+              <a href="/pricing" class="btn btn-primary btn-large">Try Recce for free</a>
+              <a href="https://cal.com/team/recce/chat" class="btn btn-hollow btn-large" target="_blank">See it in action</a>
             </div>
 
           </div>
@@ -130,7 +130,7 @@
                   <li><i class="bi bi-check-circle"></i> Generate actionable review checklists</li>
                   <li><i class="bi bi-check-circle"></i> See the full business context behind changes</li>
                 </ul>
-                <a href="#" class="btn btn-hollow btn-lg">Live Demo</a>
+                <a href="https://pr1.demo.datarecce.io/" class="btn btn-hollow btn-lg" target="_blank">Live Demo</a>
               </div>
               
               <div class="col-12 col-sm-12 col-md-6 col-lg-7">
@@ -184,7 +184,7 @@
                   <li><i class="bi bi-check-circle"></i> Generate actionable review checklists</li>
                   <li><i class="bi bi-check-circle"></i> See the full business context behind changes</li>
                 </ul>
-                <a href="https://medium.com/inthepipeline/using-column-level-lineage-to-validate-dbt-data-model-changes-2569b21af7ca" class="btn btn-hollow btn-lg" target="_blank">Use-case</a>
+                <a href="https://medium.com/inthepipeline/using-column-level-lineage-to-validate-dbt-data-model-changes-2569b21af7ca" class="btn btn-hollow btn-lg" target="_blank">The Recce Workflow</a>
               </div>
               
               <div class="col-12 col-sm-12 col-md-6 col-lg-7">
