--- a/material/overrides/pricing.html
+++ b/material/overrides/pricing.html
@@ -59,7 +59,7 @@
         </div>
 
         <div class="features">
-          <h4>includes:</h4>
+          <h4>Includes:</h4>
           <ul>
             <li><i class="bi bi-check-circle"></i> 5 User Seats</li>
             <li><i class="bi bi-check-circle"></i> 1 Concurrent Session</li>
@@ -69,7 +69,7 @@
         </div>
 
         <div class="cta">
-          <a href="#" class="btn btn-primary btn-lg">Get Started for Free</a>
+          <a href="https://cloud.datarecce.io" class="btn btn-primary btn-lg" target="_blank">Get Started for Free</a>
         </div>
 
 
@@ -109,7 +109,7 @@
         </div>
 
         <div class="cta">
-          <a href="#" class="btn btn-primary btn-lg">Start Free Trial</a>
+          <a href="https://cloud.datarecce.io" class="btn btn-primary btn-lg" target="_blank">Start Free Trial</a>
         </div>
 
       </div>
@@ -135,7 +135,7 @@
 
         
         <div class="features">
-          <h4>Includes everything in Free, and:</h4>
+          <h4>Includes everything in team, and:</h4>
           <ul>
             <li><i class="bi bi-check-circle"></i> Custom User Seats</li>
             <li><i class="bi bi-check-circle"></i> Advanced GitHub Integration</li>
@@ -150,21 +150,23 @@
         </div>
 
         <div class="cta">
-          <a href="#" class="btn btn-primary btn-lg">Request Demo</a>
+          <a href="https://cal.com/team/recce/enterprise" class="btn btn-primary btn-lg" target="_blank">Request Demo</a>
         </div>
 
       </div>
 
       <div class="package package-not-sure">
         <h2>Not sure which plan?</h2>
-        <h2><a href="#">Talk to us</a></h2>
+        <h2><a href="https://cal.com/team/recce/chat" target="_blank">Talk to us</a></h2>
       </div>
 
       <div class="package package-oss">
 
         <div class="package-content">
           <div class="icon">
-            <img src="/assets/images/home/oss.png" />
+            <div class="icon-holder">
+              <img src="/assets/images/home/oss.png" />
+            </div>
           </div>
           <div>
             <h2 class="package-title">Open-Source Core</h2>
@@ -173,7 +175,7 @@
         </div>
 
         <div class="package-cta">
-          <a href="#" class="btn btn-primary btn-lg">Try it Now</a>
+          <a href="https://github.com/datarecce/recce" class="btn btn-primary btn-lg" target="_blank">Try it Now</a>
         </div>
       </div>
 
@@ -231,6 +233,78 @@
             <div class="accordion-body">
               <p>
                 Pricing is based on user seats and active minutes per month. Contact us for enterprise pricing.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="faqHeading3">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faqCollapse3" aria-expanded="false" aria-controls="faqCollapse3">
+              <h3>How do I get started?</h3>
+              <i class="bi bi-plus ms-auto closed"></i>
+              <i class="bi bi-dash ms-auto open"></i>
+            </button>
+          </h2>
+          <div id="faqCollapse3" class="accordion-collapse collapse" aria-labelledby="faqHeading3" data-bs-parent="#faqAccordion">
+            <div class="accordion-body">
+              <p>
+                We suggest starting with our open-source software to explore core Recce features. From there, you can upgrade to the Community or Team or Enterprise plan based on your team’s collaboration and governance needs.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="faqHeading4">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faqCollapse4" aria-expanded="false" aria-controls="faqCollapse4">
+              <h3>Do I need to use OSS, or can I use the Community/Team plan directly? </h3>
+              <i class="bi bi-plus ms-auto closed"></i>
+              <i class="bi bi-dash ms-auto open"></i>
+            </button>
+          </h2>
+          <div id="faqCollapse4" class="accordion-collapse collapse" aria-labelledby="faqHeading4" data-bs-parent="#faqAccordion">
+            <div class="accordion-body">
+              <p>
+                We suggest starting with our open-source software to explore core Recce features. From there, you can upgrade to the Community or Team or Enterprise plan based on your team’s collaboration and governance needs.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="faqHeading5">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faqCollapse5" aria-expanded="false" aria-controls="faqCollapse5">
+              <h3>How are Active Minutes calculated?</h3>
+              <i class="bi bi-plus ms-auto closed"></i>
+              <i class="bi bi-dash ms-auto open"></i>
+            </button>
+          </h2>
+          <div id="faqCollapse5" class="accordion-collapse collapse" aria-labelledby="faqHeading5" data-bs-parent="#faqAccordion">
+            <div class="accordion-body">
+              <p>
+                We suggest starting with our open-source software to explore core Recce features. From there, you can upgrade to the Community or Team or Enterprise plan based on your team’s collaboration and governance needs.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="faqHeading6">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faqCollapse6" aria-expanded="false" aria-controls="faqCollapse6">
+              <h3>I’ve encountered an error/bug, who can help me?</h3>
+              <i class="bi bi-plus ms-auto closed"></i>
+              <i class="bi bi-dash ms-auto open"></i>
+            </button>
+          </h2>
+          <div id="faqCollapse6" class="accordion-collapse collapse" aria-labelledby="faqHeading6" data-bs-parent="#faqAccordion">
+            <div class="accordion-body">
+              <p>You can reach us in several ways:</p>
+              <ul>
+                <li>Open an issue in our <a href="https://github.com/datarecce/recce" target="_blank">open-source GitHub repo</a></li>
+                <li>Join the conversation in the <a href="https://www.getdbt.com/community/join-the-community" target="_blank">dbt Slack</a> channel <a href="https://getdbt.slack.com/archives/C05C28V7CPP" target="_blank">#tool-recce</a></li>
+                <li>Email us at <a href="mailto:support@datarecce.io">support@datarecce.io</a></li>
+                <li><a href="https://cal.com/team/recce/chat" target="_blank">Book a meeting</a> with our team</li>
               </p>
             </div>
           </div>
