--- a/material/overrides/app.html
+++ b/material/overrides/app.html
@@ -55,17 +55,17 @@
             <li class="nav-item"><a href="/docs" class="nav-link">Docs</a></li>
             <li class="nav-item"><a href="/blog" class="nav-link">Blog</a></li>
             <li class="nav-item"><a href="/pricing" class="nav-link">Pricing</a></li>
-            <li class="nav-item"><a href="/about" class="nav-link">About</a></li>
             <li class="nav-item"><a href="/case-studies" class="nav-link">Case&nbsp;Studies</a></li>
+            <li class="nav-item"><a href="/about" class="nav-link">About</a></li>
           </ul>
         </div>
 
         <!-- Right: Buttons -->
         <div class="action-buttons ms-auto d-none d-lg-block">
           
-          <a href="#" class="btn btn-hollow btn-lg"><i class="bi bi-github"></i><span>Github</span></a>
+          <a href="https://github.com/datarecce/recce" class="btn btn-hollow btn-lg" target="_blank"><i class="bi bi-github"></i><span>Github</span></a>
 
-          <a href="#cal" class="btn btn-primary btn-lg d-none d-lg-inline">Book a demo</a>
+          <a href="https://cal.com/team/recce/enterprise" class="btn btn-primary btn-lg d-none d-lg-inline" target="_blank">Book a demo</a>
 
 
         </div>
@@ -120,7 +120,7 @@
 
           <div class="row">
 
-            <div class="col-12 col-sm-6 col-lg-5">
+            <div class="col-12 col-sm-6 col-lg-3">
 
               <div class="footer-brand">
                 
@@ -147,18 +147,30 @@
 
             </div>
 
-            <div class="col-12 col-sm-6 col-lg-3">
+            <div class="col-12 col-sm-6 col-lg-2">
 
               <div class="footer-links">
                 <h2>Quick Links</h2>
                 <ul class="footer-nav">
-                  <li class="nav-item"><i class="bi bi-chevron-right"></i>&nbsp;<a href="/blog" class="nav-link">Blog</a></li>
+
                   <li class="nav-item"><i class="bi bi-chevron-right"></i>&nbsp;<a href="/docs" class="nav-link">Documentation</a></li>
+                  <li class="nav-item"><i class="bi bi-chevron-right"></i>&nbsp;<a href="/blog" class="nav-link">Blog</a></li>
+                  <li class="nav-item"><i class="bi bi-chevron-right"></i>&nbsp;<a href="/about" class="nav-link">About</a></li>
+                  <li class="nav-item"><i class="bi bi-chevron-right"></i>&nbsp;<a href="/pricing" class="nav-link">Pricing</a></li>
+                  <li class="nav-item"><i class="bi bi-chevron-right"></i>&nbsp;<a href="/careers" class="nav-link">Careers</a></li>
                   <li class="nav-item"><i class="bi bi-chevron-right"></i>&nbsp;<a href="/case-studies" class="nav-link">Case Studies</a></li>
                   <li class="nav-item"><i class="bi bi-chevron-right"></i>&nbsp;<a href="https://github.com/datarecce/recce" class="nav-link" target="_blank">GitHub</a></li>  
                 </ul>
               </div>
 
+            </div>
+
+
+            <div class="col-12 col-sm-6 col-lg-3 soc2">
+              <div class="soc2-image">
+                <img src="/assets/images/home/soc2.png" />
+              </div>
+              <p><a href="https://trust.cloud.datarecce.io/" target="_blank">SOC 2 Certified</a></p>
             </div>
 
             <div class="col-12 col-sm-12 col-lg-4">
