update message and re-order cloud

--- a/material/overrides/home.html
+++ b/material/overrides/home.html
@@ -45,13 +45,13 @@
             <div class="release" id="release-info">
             </div>
 
-            <h1>Data reconnaissance<br />for smarter deployments</h1>
+            <h1>Trust, Verify, Ship</h1>
 
-            <h2>Recce turns data changes into actionable checklists so you can spot issues before they hit production. Cut review time, boost confidence, and deploy data at the speed of your business.</h2>
+            <h2>cut dbt review time by 90% and ship correct data fast.</h2>
 
             <div class="cta-buttons">
-              <a href="/pricing" class="btn btn-primary btn-large">Try Recce for free</a>
-              <a href="https://cal.com/team/recce/chat" class="btn btn-hollow btn-large" target="_blank">See it in action</a>
+              <a href="/pricing" class="btn btn-primary btn-large">Start Free</a>
+              <a href="https://pr1.demo.datarecce.io/" class="btn btn-hollow btn-large" target="_blank">See it in action</a>
             </div>
 
           </div>
@@ -79,27 +79,6 @@
       </div>
     </section>
 
-
-    <section class="cloud-share">
-
-      <div class="container-xl">
-        <div class="section-content">
-
-          <div class="cloud-description">
-            <h2>Securely Share to Cloud</h2>
-            <p>Easily share and review data validation checks—no local setup required. Recce Cloud gives your team secure, SOC 2 Type I–compliant access to checks right in the browser, so reviewers and stakeholders can jump in fast.</p>
-          </div>
-
-          <div class="cloud-image">
-            <img src="/assets/images/home/cloud-share.png" />
-          </div>
-
-        </div>
-
-      </div>
-
-
-    </section>
 
     <section class="workflow">
 
@@ -151,11 +130,11 @@
                 <div class="how-tag">
                   <span>Verifiability</span>
                 </div>
-                <h2>Focus on what matters</h2>
+                <h2>Collaborate for clarity</h2>
                 <ul>
-                  <li><i class="bi bi-check-circle"></i> Recognize changed and impacted data</li>
-                  <li><i class="bi bi-check-circle"></i> Generate actionable review checklists</li>
-                  <li><i class="bi bi-check-circle"></i> See the full business context behind changes</li>
+                  <li><i class="bi bi-check-circle"></i> Contextualize changes for better review</li>
+                  <li><i class="bi bi-check-circle"></i> Verify data impact with stakeholders</li>
+                  <li><i class="bi bi-check-circle"></i> Automate best practices for new team members</li>
                 </ul>
                 <a href="/case-studies/rio-department-of-health/" class="btn btn-hollow btn-lg">Case Study</a>
               </div>
@@ -178,11 +157,11 @@
                 <div class="how-tag">
                   <span>Velocity</span>
                 </div>
-                <h2>Focus on what matters</h2>
+                <h2>Accelerate data deployment</h2>
                 <ul>
-                  <li><i class="bi bi-check-circle"></i> Recognize changed and impacted data</li>
-                  <li><i class="bi bi-check-circle"></i> Generate actionable review checklists</li>
-                  <li><i class="bi bi-check-circle"></i> See the full business context behind changes</li>
+                  <li><i class="bi bi-check-circle"></i> Catch errors early before production</li>
+                  <li><i class="bi bi-check-circle"></i> Automate validation steps</li>
+                  <li><i class="bi bi-check-circle"></i> Reduce time spent manually reviewing changes</li>
                 </ul>
                 <a href="https://medium.com/inthepipeline/using-column-level-lineage-to-validate-dbt-data-model-changes-2569b21af7ca" class="btn btn-hollow btn-lg" target="_blank">The Recce Workflow</a>
               </div>
@@ -253,6 +232,23 @@
       </div>
     </section>
 
+    <section class="cloud-share">
+
+      <div class="container-xl">
+        <div class="section-content">
+
+          <div class="cloud-description">
+            <h2>Securely Share to Cloud</h2>
+            <p>Easily share and review data validation checks—no local setup required. Recce Cloud gives your team secure, SOC 2 Type I–compliant access to checks right in the browser, so reviewers and stakeholders can jump in fast.</p>
+          </div>
+
+          <div class="cloud-image">
+            <img src="/assets/images/home/cloud-share.png" />
+          </div>
+
+        </div>
+      </div>
+    </section>
 
     <section class="testimonials" id="users">
 
