--- a/material/overrides/home.html
+++ b/material/overrides/home.html
@@ -85,9 +85,9 @@
       <div class="container">
         <div class="section-header horizontal">
 
-          <h2>How Recce enhances your data workflow</h2>
+          <h2>accelerating your data workflow</h2>
 
-          <p>Recce lets you evaluate data in context before production and ship working data faster, changing the data deployment process from being frustrating overhead to advantage.</p>
+          <p>Recce lets you evaluate data in context before production and ship working data faster, turning the data deployment process from frustrating overhead into a competitive advantage.</p>
 
         </div>
       </div>
@@ -254,7 +254,7 @@
 
       <div class="container-xl">
         <div class="section-header aligned-left">
-          <h2>Who it's for</h2>
+          <h2>Who uses Recce</h2>
           <p>Recce helps data teams deploy confidently—without slow, painful reviews.</p>
         </div>
       </div>
