edits with karen & dori

--- a/material/overrides/app.html
+++ b/material/overrides/app.html
@@ -131,7 +131,6 @@
                   <h1>Recce</h1>
                 </a>
 
-                <h2>Preview dbt data modeling changes<br />before merging to prod.</h2> 
 
                 <!-- <a href="https://cal.com/team/recce/chat?utm_source=banner&utm_campaign=oss" target="_blank" />
                   <img alt="Book us with Cal.com" src="https://cal.com/book-with-cal-light.svg" style="margin-bottom: 2rem"/>
@@ -176,9 +175,7 @@
             <div class="col-12 col-sm-12 col-lg-4">
 
               <div class="mailinglist-form">
-                <h2>Level-up your data project PR review and<br />stop merging breaking changes into production</h2>
-
-                <h3>Sign up for Recce updates</h3>
+                <h2>Sign Up for Recce Updates and Data Engineering Insights</h2>
                 <div id="mc_embed_shell">
                   <div id="mc_embed_signup">
                     <form action="https://app.us1.list-manage.com/subscribe/post?u=2b18366427f11835f05f68aeb&amp;id=b82bfd845e&amp;f_id=006a76e2f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_self" novalidate="">
