--- a/material/overrides/pricing.html
+++ b/material/overrides/pricing.html
@@ -24,8 +24,8 @@
     <div class="page-header-content">
 
 
-      <h1>Simple Pricing that<br />Grows with Your Team</h1>
-      <h2>Get powerful features, scalable support, and real value — all in one simple plan, or many tailored ones.</h2>
+      <h1>Recce Cloud</h1>
+      <h2>Review, validate, and standardize workflow from solo-user to enterprise</h2>
 
     </div>
 
