--- a/material/overrides/careers.html
+++ b/material/overrides/careers.html
@@ -87,7 +87,7 @@
           <div class="value">
             <div class="value-meta">
               <div>
-                <h2>Boldness</h2>
+                <h2>Courage</h2>
                 <h3>Unconventional, Executed</h3>
               </div>
               <div class="value-icon">
