--- a/material/overrides/pricing.html
+++ b/material/overrides/pricing.html
@@ -64,7 +64,7 @@
             <li><i class="bi bi-check-circle"></i> 5 User Seats</li>
             <li><i class="bi bi-check-circle"></i> 1 Concurrent Session</li>
             <li><i class="bi bi-check-circle"></i> 500 Active Minutes per Month</li>
-            <li><i class="bi bi-check-circle"></i> Pull Request Merge Insights (Coming Soon)</li>
+            <li><i class="bi bi-check-circle"></i> Pull Request Merge Insights (in beta)</li>
           </ul>
         </div>
 
@@ -101,9 +101,9 @@
             <li><i class="bi bi-check-circle"></i> 5 User Seats</li>
             <li><i class="bi bi-check-circle"></i> 3 Concurrent Sessions</li>
             <li><i class="bi bi-check-circle"></i> 2,000 Active Minutes per Month</li>
-            <li><i class="bi bi-check-circle"></i> Basic GitHub Integration</li>
-            <li><i class="bi bi-check-circle"></i> Shared Checklist Templates (Coming Soon)</li>
-            <li><i class="bi bi-check-circle"></i> Priority Email Support</li>
+            <li><i class="bi bi-check-circle"></i> GitHub Integration</li>
+            <li><i class="bi bi-check-circle"></i> Shared Checklist Templates (in beta)</li>
+            <li><i class="bi bi-check-circle"></i> Priority Support</li>
             <li><i class="bi bi-check-circle"></i> 14-Day Free Trial</li>
           </ul>
         </div>
@@ -143,7 +143,7 @@
             <li><i class="bi bi-check-circle"></i> Fine-grained Access Control</li>
             <li><i class="bi bi-check-circle"></i> SSO/SAML</li>
             <li><i class="bi bi-check-circle"></i> Full change audit trail reporting</li>
-            <li><i class="bi bi-check-circle"></i> AI-assisted data checks (Coming Soon)</li>
+            <li><i class="bi bi-check-circle"></i> AI-assisted data checks (in beta)</li>
             <li><i class="bi bi-check-circle"></i> Bring Your Own Cloud (BYOC)</li>
             <li><i class="bi bi-check-circle"></i> Custom SLAs / Dedicated Support Team</li>
           </ul>
@@ -175,7 +175,7 @@
         </div>
 
         <div class="package-cta">
-          <a href="https://github.com/datarecce/recce" class="btn btn-primary btn-lg" target="_blank">Try it Now</a>
+          <a href="https://github.com/datarecce/recce" class="btn btn-hollow btn-lg" target="_blank">Start Now</a>
         </div>
       </div>
 
@@ -264,23 +264,6 @@
             </button>
           </h2>
           <div id="faqCollapse4" class="accordion-collapse collapse" aria-labelledby="faqHeading4" data-bs-parent="#faqAccordion">
-            <div class="accordion-body">
-              <p>
-                We suggest starting with our open-source software to explore core Recce features. From there, you can upgrade to the Community or Team or Enterprise plan based on your team’s collaboration and governance needs.
-              </p>
-            </div>
-          </div>
-        </div>
-
-        <div class="accordion-item">
-          <h2 class="accordion-header" id="faqHeading5">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faqCollapse5" aria-expanded="false" aria-controls="faqCollapse5">
-              <h3>How are Active Minutes calculated?</h3>
-              <i class="bi bi-plus ms-auto closed"></i>
-              <i class="bi bi-dash ms-auto open"></i>
-            </button>
-          </h2>
-          <div id="faqCollapse5" class="accordion-collapse collapse" aria-labelledby="faqHeading5" data-bs-parent="#faqAccordion">
             <div class="accordion-body">
               <p>
                 We suggest starting with our open-source software to explore core Recce features. From there, you can upgrade to the Community or Team or Enterprise plan based on your team’s collaboration and governance needs.
