--- a/material/overrides/app.html
+++ b/material/overrides/app.html
@@ -60,7 +60,7 @@
             <ul class="nav">
               <!-- <li class="nav-item"><a href="/cloud" class="nav-link">Cloud</a></li> -->
               <li class="nav-item"><a href="/blog" class="nav-link">Blog</a></li>
-              <li class="nav-item"><a href="/docs" class="nav-link">Docs</a></li>
+              <li class="nav-item"><a href="https://docs.datarecce.io/" class="nav-link">Docs</a></li>
               <li class="nav-item"><a href="/case-studies" class="nav-link">Case Studies</a></li>
               <li class="nav-item btn btn-primary signup"><a href="https://github.com/datarecce/recce" class="nav-link" target="_blank">GitHub <i class="bi bi-box-arrow-up-right"></i></a></li>
             </ul>
